test/CheckError/Const/ModifyConstLocalVariable.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

export int main(unused int argc, unused ubyte ** argv) {
	const int value = 0;
	// CHECK: .loci:8:2: error: template arguments do not satisfy require predicate 'const(int_t) : movable_t' of method 'assign'
	// CHECK: .loci:8:2: note: because: mutator method '__moveto' is required but type is const
	value = 1;
	return 0;
}

// CHECK: 1 error generated.

